tests/pairs/ill-typed/bad-pairs-7.stella
language core;

extend with #pairs;

fn swap(p : {Nat, Nat}) -> {Nat, Nat} {
  return {p.2, p.1}
}

fn main(x : Nat) -> Nat {
  return {0, 0}
}
